# cyberskill

./: .gitignore  README.md  pyproject.toml
examples/: claude_agent.py  mcp_server.py
src/cyberskill/: __init__.py  base.py  cli.py  intel.py  models.py  orchestrator.py  registry.py  report.py  runner.py  skill.py
src/cyberskill/tools/: __init__.py  commix.py  ffuf.py  gobuster.py  hydra.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  sslscan.py  wfuzz.py
tests/: conftest.py  test_base.py  test_cli.py  test_models.py  test_registry.py  test_skill.py
tests/tools/: test_nmap.py  test_nuclei.py  test_sqlmap.py  test_wfuzz.py
